<resources>
    <!-- - - - - -
        Constants
    - - - - - -->

    <!-- Events -->
    <string name="broadcast_application_is_running">Broadcast.ApplicationIsRunning</string>
    <string name="broadcast_activity_start">Broadcast.ActivityStart</string>
    <string name="broadcast_activity_pause">Broadcast.ActivityPause</string>
    <string name="broadcast_keybind_action">Broadcast.KeyBindAction</string>

    <!-- Storage -->
    <string name="storage_version">1.4</string>

    <!-- - - - - -
        Text
    - - - - - -->

    <!-- General -->
    <string name="app_name">Not Bad Player</string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_albums">Albums</string>
    <string name="title_playlists">Lists</string>
    <string name="title_search">Search</string>
    <string name="title_recent">Recent</string>
    <string name="title_settings">Settings</string>

    <!-- Albums tab -->
    <string name="albums_title_unknown">Unknown</string>
    <string name="albums_zero_track_num_symbol">-</string>
    <string name="albums_tracks">tracks</string>
    <string name="albums_total_duration">duration</string>
    
    <!-- Player tab -->
    <string name="player_nothing_playing">Nothing playing</string>
    <string name="player_zero_timer">0:00</string>
    <string name="player_timer_separator">/</string>
    
    <!-- Playlists -->
    <string name="playlist_create">Create</string>
    <string name="playlist_edit">Edit</string>
    <string name="playlist_cancel">Cancel</string>
    <string name="playlist_name">Playlist name</string>
    <string name="playlist_done">Done</string>
    <string name="playlist_update">Update</string>
    <string name="playlist_added_tracks">Added tracks</string>
    <string name="playlist_search_tracks">Search</string>
    <string name="playlist_search_album_tracks">Album Tracks</string>
    <string name="playlist_dialog_no_tracks">Please add at least one track</string>
    <string name="playlist_dialog_invalid_name">Please enter a valid playlist name</string>
    <string name="playlist_dialog_taken_name">Playlist name is already taken</string>

    <string name="playlist_name_history">Recently played</string>
    <string name="playlist_name_recently_added">Recently added</string>
    <string name="playlist_name_favorites">Favorites</string>
    <string name="playlist_name_previously_played">Previously Played</string>
    <string name="playlist_name_search_results">Search Results</string>
    
    <!-- Search tab -->
    <string name="search_hint">Search for track</string>
    <string name="search_results_tip">search results</string>
    <string name="search_results_tip_no_results">no results</string>
    <string name="search_state_searching">Searching...</string>
    <string name="search_filter_title">Title</string>
    <string name="search_filter_album">Album</string>
    <string name="search_filter_artist">Artist</string>

    <!-- Settings tab -->
    <string name="settings_appearance">Appearance</string>
    <string name="settings_general_color">Theme</string>
    <string name="settings_album_sorting">Album Sorting</string>
    <string name="settings_track_sorting">Track Sorting</string>
    <string name="settings_stars">Show Stars</string>
    <string name="settings_volume_bar">Show Volume Bar</string>
    <string name="settings_open_player_on_play">Play opens player</string>
    <string name="settings_keybinds">Key binds</string>
    <string name="settings_keybinds_action">Action</string>
    <string name="settings_keybinds_command">Command</string>
    <string name="settings_keybind_home">Home button</string>
    <string name="settings_keybind_player_volume_up">Player Volume Up</string>
    <string name="settings_keybind_player_volume_down">Player Volume Down</string>
    <string name="settings_keybind_player_play">Player Play</string>
    <string name="settings_keybind_player_next">Player Next</string>
    <string name="settings_keybind_player_prev">Player Previous</string>
    <string name="settings_keybind_player_recall">Player Recall</string>
    <string name="settings_keybind_player_swipe_left">Player Swipe L</string>
    <string name="settings_keybind_player_swipe_right">Player Swipe R</string>
    <string name="settings_keybind_player_volume">Player Speaker</string>
    <string name="settings_keybind_qplayer_volume_up">QPlayer Volume Up</string>
    <string name="settings_keybind_qplayer_volume_down">QPlayer Volume Down</string>
    <string name="settings_keybind_qplayer_play">QPlayer Play</string>
    <string name="settings_keybind_qplayer_next">QPlayer Next</string>
    <string name="settings_keybind_qplayer_prev">QPlayer Previous</string>
    <string name="settings_keybind_earphones_unplug">Earphones Unplug</string>
    <string name="settings_keybind_external_play">External Play</string>
    <string name="settings_reset">Reset</string>
    <string name="settings_reset_button">Reset to defaults</string>
    <string name="settings_dialog_reset">Reset settings to defaults?</string>

    <!-- Timers -->
    <string name="timers">Timers</string>
    <string name="timers_audio_idle_stop">Stop after being idle</string>
    
    <!-- About -->
    <string name="about">About</string>
    <string name="about_version">Version 1.9 (12)</string>
    <string name="about_release_date">Released 2020.03.1</string>
    <string name="about_credits">Programmed, designed &amp; tested by Kristiyan Butev</string>

    <!-- Notification -->
    <string name="notification_title_prefix">\'</string>
    <string name="notification_title_suffix">\' -\u0020</string>
    <string name="notification_resume">Resume</string>
    <string name="notification_pause">Pause</string>
    <string name="notification_previous">Previous</string>
    <string name="notification_next">Next</string>
    
    <!-- Errors -->
    <string name="error">Error</string>
    <string name="error_unknown">Unknown error occurred.</string>
    <string name="error_need_storage_permission">You cannot use the player without giving read storage permissions!</string>
    <string name="error_invalid_file">Invalid file.</string>
    <string name="error_invalid_file_play">Cannot play file.</string>
    <string name="error_no_tracks_on_device">No tracks were found on your device</string>

    <!-- Toasts -->
    <string name="toast_device_library_changed">Device library changed</string>
    <string name="toast_edit_playlists">Tap on lists to edit</string>
</resources>
