<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textAppearance="@style/TitleText"
        android:singleLine="true"
        android:textAlignment="center"
        android:gravity="center_horizontal"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_version"
        android:textAppearance="@style/PrimaryText"
        android:singleLine="true"
        android:textAlignment="center"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_release_date"
        android:textAppearance="@style/PrimaryText"
        android:singleLine="true"
        android:textAlignment="center"
        android:gravity="center_horizontal"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_credits"
        android:textAppearance="@style/PrimaryText"
        android:textAlignment="center"
        android:gravity="center_horizontal"/>
</LinearLayout>