<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_keybinds"
        android:singleLine="true"
        android:textColor="@color/colorTextPrimary"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_keybinds_action"
            android:singleLine="true"
            android:textColor="@color/colorSettingsKeybindTipText"/>
        <Space
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_keybinds_command"
            android:singleLine="true"
            android:textColor="@color/colorSettingsKeybindTipText"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_keybind_home"
            android:singleLine="true"
            android:textColor="@color/colorTextPrimary"/>
        <Space
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Spinner
            android:id="@+id/keybindHome"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:background="@drawable/settings_keybind_border"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_keybind_player_volume_up"
            android:singleLine="true"
            android:textColor="@color/colorTextPrimary"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Spinner
            android:id="@+id/keybindPlayerVU"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:background="@drawable/settings_keybind_border"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_keybind_player_volume_down"
            android:singleLine="true"
            android:textColor="@color/colorTextPrimary"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Spinner
            android:id="@+id/keybindPlayerVD"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:background="@drawable/settings_keybind_border"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_keybind_player_next"
            android:singleLine="true"
            android:textColor="@color/colorTextPrimary"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Spinner
            android:id="@+id/keybindPlayerNext"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:background="@drawable/settings_keybind_border"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_keybind_player_prev"
            android:singleLine="true"
            android:textColor="@color/colorTextPrimary"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Spinner
            android:id="@+id/keybindPlayerPrev"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:background="@drawable/settings_keybind_border"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_keybind_qplayer_volume_up"
            android:singleLine="true"
            android:textColor="@color/colorTextPrimary"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Spinner
            android:id="@+id/keybindQPlayerVU"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:background="@drawable/settings_keybind_border"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_keybind_qplayer_volume_down"
            android:singleLine="true"
            android:textColor="@color/colorTextPrimary"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Spinner
            android:id="@+id/keybindQPlayerVD"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:background="@drawable/settings_keybind_border"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_keybind_qplayer_next"
            android:singleLine="true"
            android:textColor="@color/colorTextPrimary"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Spinner
            android:id="@+id/keybindQPlayerNext"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:background="@drawable/settings_keybind_border"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_keybind_qplayer_prev"
            android:singleLine="true"
            android:textColor="@color/colorTextPrimary"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Spinner
            android:id="@+id/keybindQPlayerPrev"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:background="@drawable/settings_keybind_border"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_keybind_earphones_unplug"
            android:singleLine="true"
            android:textColor="@color/colorTextPrimary"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Spinner
            android:id="@+id/keybindEarphonesUnplug"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:background="@drawable/settings_keybind_border"/>
    </LinearLayout>
</LinearLayout>