<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_appearance"
        android:singleLine="true"
        android:textColor="@color/colorTextPrimary"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_general_color"
            android:singleLine="true"
            android:textColor="@color/colorTextPrimary"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/appearancePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_album_sorting"
            android:singleLine="true"
            android:textColor="@color/colorTextPrimary"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/albumSortingPicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_track_sorting"
            android:singleLine="true"
            android:textColor="@color/colorTextPrimary"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/trackSortingPicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>