<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/baseBackground">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:focusableInTouchMode="true">
        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="70dp"
            android:layout_height="48dp"
            android:text="@string/playlist_cancel"
            android:textAppearance="@style/GenericButtonText"
            android:background="@color/genericButtonBackground"/>
        <Space
            android:layout_width="10dp"
            android:layout_height="0dp" />
        <EditText
            android:id="@+id/playlistNameField"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:textAppearance="@style/PrimaryText"
            android:textColor="@null"
            android:background="@drawable/playlist_name_field_border"
            android:hint="@string/playlist_name"
            android:textColorHint="@color/primarySubtext"
            android:layout_weight="0.33"
            android:inputType="textVisiblePassword"
            android:singleLine="true"/>
        <Space
            android:layout_width="10dp"
            android:layout_height="0dp" />
        <Button
            android:id="@+id/buttonDone"
            android:layout_width="64dp"
            android:layout_height="48dp"
            android:text="@string/playlist_done"
            android:textAppearance="@style/GenericButtonText"
            android:background="@color/genericButtonBackground"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/playlist_added_tracks"
            android:textAppearance="@style/TitleText"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="10dp" />

        <ListView
            android:id="@+id/addedTracksList"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/playlist_tracks"
            android:textAppearance="@style/TitleText"/>
        
        <Space
            android:layout_width="0dp"
            android:layout_height="10dp" />

        <ListView
            android:id="@+id/albumsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>